# fuckmit

./: .fuckmit.yml  .gitignore  Cargo.toml  README.md  README.zh-CN.md  flake.nix  package.json
.github/workflows/: release.yml
scripts/: install.js  update-hashes.sh
src/: config.rs  error.rs  gateway.rs  lib.rs  main.rs  types.rs
src/commands/: auth.rs  cli.rs  completion.rs  config.rs  generate.rs  mod.rs  prompt.rs
src/config/: mappings.rs  mod.rs
src/providers/: anthropic.rs  azure.rs  deepseek.rs  mod.rs  openai.rs  qwen.rs
src/utils/: file_pattern.rs  git.rs  git_repo.rs  mod.rs  version.rs
tests/: cli_test.rs  cli_test_options.rs  config_test.rs  git_test.rs  git_test_add_all.rs  prompt_test.rs  provider_test.rs
