[package]
name = "fuckmit"
version = "0.1.2"
edition = "2021"
description = "AI-powered git commit message generator"
authors = ["mingeme00@outlook.com"]
keywords = ["git", "commit", "ai", "cli"]
categories = ["command-line-utilities"]
repository = "https://github.com/mingeme/fuckmit"
readme = "README.md"
license = "MIT"
include = ["Cargo.lock", "Cargo.toml", "README.md", "/src"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking", "native-tls-vendored"] }
tokio = { version = "1.32", features = ["full"] }
anyhow = "1.0"
dirs = "5.0"

thiserror = "1.0"
config = "0.13"
once_cell = "1.18"
glob = "0.3"
async-trait = "0.1"
indicatif = "0.17"
regex = "1.11.1"
tempfile = "3.8"

[profile.release]
strip = true
panic = 'abort'
incremental = false
overflow-checks = false
lto = "fat"
build-override = { opt-level = 3 }

[dev-dependencies]
test-case = "3.2"
assert_cmd = "2.0"
predicates = "3.0"
