[package]
name = "fuckmit"
version = "0.4.0"
edition = "2021"
description = "AI-powered git commit message generator"
authors = ["heminghu00@outlook.com"]
keywords = ["git", "commit", "ai", "cli"]
categories = ["command-line-utilities"]
repository = "https://github.com/mingeme/fuckmit"
readme = "README.md"
license = "MIT"
include = ["Cargo.lock", "Cargo.toml", "README.md", "/src"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.9"
reqwest = { version = "0.12", features = ["json", "blocking", "native-tls-vendored"] }
tokio = { version = "1.32", features = ["full"] }
anyhow = "1.0"

thiserror = "2.0"
config = "0.15"
async-trait = "0.1.82"

[profile.release]
strip = true
panic = 'abort'
incremental = false
overflow-checks = false
lto = "fat"
build-override = { opt-level = 3 }

[dev-dependencies]
test-case = "3.2"
assert_cmd = "2.0"
predicates = "3.0"
